--- a/Web App/package.json
+++ b/Web App/package.json
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/siddharth200119/SmartGaze/issues"
   },
-  "homepage": "https://github.com/siddharth200119/SmartGaze#readme"
+  "homepage": "https://github.com/siddharth200119/SmartGaze#readme",
+  "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
+  }
 }
