--- a/Web App/package.json
+++ b/Web App/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/siddharth200119/SmartGaze#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.18.0"
   }
 }
