--- a/Web App/package.json
+++ b/Web App/package.json
@@ -26,9 +26,11 @@
   },
   "homepage": "https://github.com/siddharth200119/SmartGaze#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "mysql": "^2.18.1"
   }
 }
